always the syntax

--- a/speed-and-distance.Rmd
+++ b/speed-and-distance.Rmd
@@ -1,10 +1,13 @@
 ---
 title: "speed-and-distance"
 author: "CharlyM"
-date: "09/05/2021"
-output: html_document
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
-
+ 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
