--- a/speed-and-distance.Rmd
+++ b/speed-and-distance.Rmd
@@ -1,12 +1,9 @@
 ---
-title: "speed-and-distance"
-author: "CharlyM"
+title: "Speed and Distance"
 ---
- 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
